fixed some spacing

--- a/src/app/components/ImagesCarousel/ImagesCarousel.module.css
+++ b/src/app/components/ImagesCarousel/ImagesCarousel.module.css
@@ -61,7 +61,19 @@
 }
 
 .carouselImage {
-  height: 1000px;
-  width: 80%;
+  padding-left: 5%;
+  height: 720px;
+  width: 78%;
   object-fit: cover;
+}
+
+
+/* Media query for bigger layout */
+@media (min-width: 1920px) {
+  .carouselImage {
+    padding-left: 6%;
+    height: 820px;
+    width: 85%;
+    object-fit: cover;
+  }
 }
